--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Your Name",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
