--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "Your Name",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.17.0",
+    "@babel/preset-react": "^7.17.0",
+    "@babel/types": "^7.23.3",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.8.1",
-    "jest": "^29.7.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
@@ -287,6 +291,8 @@
     "randombytes": "^2.1.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "readable-stream": "^3.6.2",
     "readdirp": "^3.6.0",
